--- a/BankAccountManagement.Data/BankAccountManagement.Data.csproj
+++ b/BankAccountManagement.Data/BankAccountManagement.Data.csproj
@@ -57,6 +57,15 @@
     <Compile Include="CheckingAccount.cs" />
     <Compile Include="Customer.cs" />
     <Compile Include="IdentityModels.cs" />
+    <Compile Include="Migrations\202111092332132_InitialCreate.cs" />
+    <Compile Include="Migrations\202111092332132_InitialCreate.Designer.cs">
+      <DependentUpon>202111092332132_InitialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202111131814547_PropertiesChanged.cs" />
+    <Compile Include="Migrations\202111131814547_PropertiesChanged.Designer.cs">
+      <DependentUpon>202111131814547_PropertiesChanged.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SavingsAccount.cs" />
     <Compile Include="Transaction.cs" />
@@ -64,6 +73,14 @@
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\202111092332132_InitialCreate.resx">
+      <DependentUpon>202111092332132_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202111131814547_PropertiesChanged.resx">
+      <DependentUpon>202111131814547_PropertiesChanged.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
