--- a/BankAccountManagement.Services/BankAccountManagement.Services.csproj
+++ b/BankAccountManagement.Services/BankAccountManagement.Services.csproj
@@ -78,6 +78,7 @@
     <Compile Include="CustomerService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SavingsAccountService.cs" />
+    <Compile Include="TransactionService.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
