--- a/BankAccountManagement.WebMVC/BankAccountManagement.WebMVC.csproj
+++ b/BankAccountManagement.WebMVC/BankAccountManagement.WebMVC.csproj
@@ -172,6 +172,7 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\SavingsAccountController.cs" />
+    <Compile Include="Controllers\TransactionController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -242,6 +243,8 @@
     <Content Include="Views\SavingsAccount\Index.cshtml" />
     <Content Include="Views\SavingsAccount\Create.cshtml" />
     <Content Include="Views\SavingsAccount\Edit.cshtml" />
+    <Content Include="Views\Transaction\Index.cshtml" />
+    <Content Include="Views\Transaction\Create.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
