--- a/BankAccountManagement.Services/BankAccountManagement.Services.csproj
+++ b/BankAccountManagement.Services/BankAccountManagement.Services.csproj
@@ -75,6 +75,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CheckingAccountService.cs" />
     <Compile Include="CustomerService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SavingsAccountService.cs" />
