--- a/BankAccountManagement.WebMVC/BankAccountManagement.WebMVC.csproj
+++ b/BankAccountManagement.WebMVC/BankAccountManagement.WebMVC.csproj
@@ -168,6 +168,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\CheckingAccountController.cs" />
     <Compile Include="Controllers\CustomerController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
@@ -245,6 +246,8 @@
     <Content Include="Views\SavingsAccount\Edit.cshtml" />
     <Content Include="Views\Transaction\Index.cshtml" />
     <Content Include="Views\Transaction\Create.cshtml" />
+    <Content Include="Views\CheckingAccount\Index.cshtml" />
+    <Content Include="Views\CheckingAccount\Create.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
